--- a/templates/index.html
+++ b/templates/index.html
@@ -68,6 +68,11 @@
                                 <li class="nav-item">
                                     <a class="nav-link" href="hobbies.html" >My Hobbies</a>
                                 </li>
+                                
+                                <li class="nav-item">
+                                     <a class="nav-link" href="weather_codes.html" >Weather Details Today</a>
+                                </li>
+
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://tpwd.texas.gov/fishboat/fish/action/reptform2.php?
