--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -32,7 +32,29 @@
 
                     <div class="row">
 
+
                             <div class="super col-lg-3 col-md-6">
+                                <a>Morning Catch Lake Somerville</a>
+                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+<!--                             <p><img src="static/1205211011a_HDR.jpg"></p> -->
+                            </div>
+
+                            <div class="super col-lg-3 col-md-6">
+                                <a>Shamrock cove Mustand Island</a>
+                            <p><img src="static/shamrock.jpg" class="my_pic_clear"></p>
+                                </div>
+
+                            <div class="super col-lg-3 col-md-6">
+                                         <a>Early Morning Lake Somerville</a>
+                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+      ?
+
+                            <div class="super col-lg-3 col-md-6">
+                                <a>Headed out Lake Somerville</a>
+                            <p><img src="static/canoe_lake.jpg" class="my_pic_clear"></p>
+                                </div>
+                                
+<!--                             <div class="super col-lg-3 col-md-6">
                                 <a> a few from Lake Somerville</a>
                             <p><img src="/static/1205211011a_HDR.jpg"></p>
                             </div>
@@ -50,8 +72,8 @@
                             <div class="super col-lg-3 col-md-6">
                                 <a>Let's do it again Lake Somerville</a>
                             <p><img src="/static/canoe_lake.jpg" class="my_pic_clear"></p>
-                                </div>
-
+                                </div> -->
+ -->
 
                             <p><img src="/static/blackFish.png" class="my_pic_clear"></p>
 
