--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -35,7 +35,7 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Morning Catch Lake Somerville</a>
-                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+                            <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
 <!--                             <p><img src="static/1205211011a_HDR.jpg"></p> -->
                             </div>
 
@@ -46,8 +46,8 @@
 
                             <div class="super col-lg-3 col-md-6">
                                          <a>Early Morning Lake Somerville</a>
-                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
-      ?
+                            <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+      
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Headed out Lake Somerville</a>
@@ -56,7 +56,7 @@
                                 
 <!--                             <div class="super col-lg-3 col-md-6">
                                 <a> a few from Lake Somerville</a>
-                            <p><img src="/static/1205211011a_HDR.jpg"></p>
+                            <p><img src="static/1205211011a_HDR.jpg"></p>
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
