--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -35,7 +35,8 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a>Morning Catch Lake Somerville</a>
-                                    <p><img src="static/0716220849.jpg" class="my_pic_clear"></p>
+                                <p><img src="static/morningcatch.jpg" class="my_pic_clear"></p>
+<!--                                     <p><img src="static/0716220849.jpg" class="my_pic_clear"></p> -->
                             </div>
 
                             <div class="super col-lg-3 col-md-6">
