--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -32,48 +32,26 @@
 
                     <div class="row">
 
-
                             <div class="super col-lg-3 col-md-6">
-                                <a>Morning Catch Lake Somerville</a>
-                                <p><img src="static/morningcatch.jpg" class="my_pic_clear"></p>
-<!--                                     <p><img src="static/0716220849.jpg" class="my_pic_clear"></p> -->
-                            </div>
-
-                            <div class="super col-lg-3 col-md-6">
-                                <a>Shamrock cove Mustand Island</a>
-                            <p><img src="static/shamrock.jpg" class="my_pic_clear"></p>
+                                <a> Morning catch Lake Somerville</a>
+                            <p><img src="/static/morningcatch.jpg"></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
-                                         <a>Early Morning Lake Somerville</a>
-                            <p><img src="static/sunrisesomerville.jpg" class="my_pic_clear"></p>
-      
-
-                            <div class="super col-lg-3 col-md-6">
-                                <a>Headed out Lake Somerville</a>
-                            <p><img src="static/canoe_lake.jpg" class="my_pic_clear"></p>
-                                </div>
-                                
-<!--                             <div class="super col-lg-3 col-md-6">
-                                <a> a few from Lake Somerville</a>
-                            <p><img src="static/1205211011a_HDR.jpg"></p>
-                            </div>
-
-                            <div class="super col-lg-3 col-md-6">
-                                <a>Shamrock cove Mustand Island</a>
+                                <a>Shamrock Cove Mustang Island</a>
                             <p><img src="/static/shamrock.jpg" class="my_pic_clear"></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
-                                <a>sample from Lake Somerville</a>
-                            <p><img src="/static/white_bass.jpg" class="my_pic_clear"></p>
-                                </div>
+                                <a>Early Morning Lake Somerville</a>
+                            <p><img src="/static/sunrisesomerville.jpg" class="my_pic_clear"></p>
+                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
-                                <a>Let's do it again Lake Somerville</a>
+                                <a>Heading out on  Lake Somerville</a>
                             <p><img src="/static/canoe_lake.jpg" class="my_pic_clear"></p>
-                                </div> -->
- -->
+                                </div>
+
 
                             <p><img src="/static/blackFish.png" class="my_pic_clear"></p>
 
@@ -89,10 +67,10 @@
                             </thead>
                     <tbody>
                             <tr>
-                                <td>spinning reel</td><td> </td><td>skill</td><td>⭐⭐⭐⭐⭐</td>
+                                <td>spinning reel</td><td> </td><td>skill</td><td>⭐⭐⭐⭐</td>
                             </tr>
                             <tr>
-                                <td>fly rod</td><td> </td><td>skill</td><td>⭐⭐</td>
+                                <td>fly rod</td><td> </td><td>skill</td><td>⭐*⭐</td>
                             </tr>
                     </tbody>
 
