--- a/templates/index.html
+++ b/templates/index.html
@@ -42,8 +42,12 @@
 
                 <nav class="navbar  navbar-expand-lg navbar-dark bg-primary">
                     <div class="col-lg-6 col-md-4">
-                            <a class="navbar-brand" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/">
+<!--                            < img src="/static/aransaspass.jpg/">-->
+<!--                            <a class="navbar-brand" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/">-->
+                            <a class="navbar-brand"
+                    href="/static/aransaspass.jpg" target="_blank">
                                Fish-U-Were-Here</a>
+
 
 
                         <img src="/static/boatman.png"  style="height: 180px" class="my_pic_clear" >
@@ -61,33 +65,22 @@
 
                             <ul class="navbar-nav me-auto mb-2 mb-lg-0 ">
 
-                                <li class="nav-item">
-                                    <a  class="nav-link" href="login.html">Login</a>
-                                </li>
+<!--                                <li class="nav-item">-->
+<!--                                    <a  class="nav-link" href="login.html">Login</a>-->
+<!--                                </li>-->
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="hobbies.html" >My Hobbies</a>
                                 </li>
-                                
-                                <li class="nav-item">
-                                     <a class="nav-link" href="weather_codes.html" >Weather Details Today</a>
-                                </li>
-
 
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://tpwd.texas.gov/fishboat/fish/action/reptform2.php?
-                                        %20%20%20%20%20%20%20lake=SOMERVILLE&archive=latest&yearcat=current&Submit=Go"
-                                        target="_blank">Condition at Somerville</a>
-                                </li>
-
-                                <li class="nav-item">
-                                    <a class="nav-link" href="contact.html">Contact</a>
+                                     <a class="nav-link" href="fishing_conditions.html" >Fishing Conditions Today</a>
                                 </li>
 
                                 <li class="nav-item">
                                     <a class="nav-link" href="https://tpwd.texas.gov/regulations/outdoor-annual/fishing/"
                                        target="_blank">Fish-U-Can-keep</a>
-<!--                                                            https://tpwd.texas.gov/regulations/outdoor-annual/fishing/-->
+
                                 </li>
 
                             </ul>
@@ -105,12 +98,12 @@
     <!-- ######################################################################################## -->
 
     <div class="continue">
-         <h1>To Be Continued</h1>
+         <h1>The Adventure Continues</h1>
 
 
 
         <h2><em>Michael <strong>Says</strong></em></h2>
-            <p>pay attention to what is not said</p>
+            <p>A day without fishing is like a day not fishing</p>
     <!--   </section>-->
         <hr>
         <h3>Just to start : </h3>
@@ -118,6 +111,7 @@
             <ul>
                 <li>things are not as they seem</li>
                 <li>what you see is what you get</li>
+                <li>something said here is to fill space</li>
             </ul>
 
 
@@ -164,6 +158,7 @@
                     <li><a> Port Aransas channel: 33" black drum </a></li>
                     <li><a> NC offshore:  12 ring-tail</a></li>
                 </ul>
+                <p>© 2022 M Elson</p>
 
         </div>
     </body>
