--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -34,7 +34,7 @@
 
                             <div class="super col-lg-3 col-md-6">
                                 <a> Morning catch Lake Somerville</a>
-                            <p><img src="/static/morningcatch.jpg"></p>
+                            <p><img src="/static/morningcatch.jpg" class="my_pic_clear"></p>
                                 </div>
 
                             <div class="super col-lg-3 col-md-6">
