--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -8,9 +8,9 @@
               crossorigin="anonymous">
 
 
-        <link rel="stylesheet" href="static/style.css">
+        <link rel="stylesheet" href="/static/style.css">
     <!--<link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
-        <link rel="icon" href="static/favicon.ico">
+        <link rel="icon" href="/static/favicon.ico">
     </head>
 
     <body>
