--- a/style.css
+++ b/style.css
@@ -108,6 +108,9 @@
             margin-right: 5%;
             }
 
+       .lawson{
+         padding: 0% 8%;
+        }
         #contact-style{
            background-color: #D1DCF4;
            text-align: center;
