--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@
             }
 
        .lawson{
-         padding: 0% 0% 0% 8%;
+         padding: 0% 8%;
         }
 
         #contact-style{
