--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
            }
 
         .navbar-nav .nav-item .nav-link {
-           color: black;
+           color: white;
             }
 
         .nav-link{
