--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 
        body {
             /* background-color: #7ec8e3; */
-            background-color:	#00BFFF;
+             background-color:	#a5f1f6;
+            /* background-color:	#00BFFF; */
             font-family: "Montserrat";
             }
 
