--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     <!--    CSS stylesheet-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--    <link rel="stylesheet" href="/m_els/A_First/static/style.css">-->
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="static/style.css">
     <!--    <link rel="icon" href="/m_els/A_First/static/favicon.ico">-->
 
 
@@ -29,7 +29,7 @@
 
         <script src="https://use.fontawesome.com/257b2535a1.js"></script>
 
-         <link rel="icon" href="/static/favicon.ico">
+         <link rel="icon" href="static/favicon.ico">
     </head>
 
     <body>
