--- a/static/style.css
+++ b/static/style.css
@@ -6,7 +6,8 @@
 
        body {
             /* background-color: #7ec8e3; */
-            background-color:	#00BFFF;
+            /* background-color:	#00BFFF; */
+            background-color:	#a5f1f6;
             font-family: "Montserrat";
             }
 
@@ -52,11 +53,11 @@
            }
 
         .navbar-nav .nav-item .nav-link {
-           color: black;
+           color: white;
             }
 
         .nav-link{
-            font-size: 1rem;
+            font-size: 1.25rem;
            }
 
          .container-fluid {
