--- a/templates/index.html
+++ b/templates/index.html
@@ -98,7 +98,9 @@
     <!-- ######################################################################################## -->
 
     <div class="continue">
-         <h1>The Adventure Continues</h1>
+<!--          <h1>The Adventure Continues</h1> -->
+        <a href="/static/rand_pic/somer_rise_15.jpg" target="_blank">
+           <h1>The Adventure Continues</h1></a>
 
 
 
