--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
 
     <div class="continue">
 <!--          <h1>The Adventure Continues</h1> -->
-        <a img src="static/somer_rise_15.jpg" target="_blank">
+        <a href="static/somer_rise_15.jpg" target="_blank">
            <h1>The Adventure Continues</h1></a>
 
 
