--- a/templates/index.html
+++ b/templates/index.html
@@ -156,8 +156,12 @@
         <div class="notables">
           <h3>notables</h3>
                 <ul>
+                        <li><a class="navbar-brand"
+                    href="static/33 inch black drum - Copy1.jpg" target="_blank">
+                              Port Aransas channel: 33" Black Drum</a></li>
+                   
 
-                    <li><a> Port Aransas channel: 33" black drum </a></li>
+<!--                     <li><a> Port Aransas channel: 33" black drum </a></li> -->
                     <li><a> NC offshore:  12 ring-tail</a></li>
                 </ul>
                 <p>© 2022 M Elson</p>
