--- a/templates/index.html
+++ b/templates/index.html
@@ -157,7 +157,7 @@
           <h3>notables</h3>
                 <ul>
                         <li><a class="navbar-brand"
-                    href="static/33 inch black drum - Copy1.jpg" target="_blank">
+                    href="/static/33 inch black drum - Copy1.jpg" target="_blank">
                               Port Aransas channel: 33" Black Drum</a></li>
                    
 
