--- a/templates/hobbies.html
+++ b/templates/hobbies.html
@@ -67,7 +67,7 @@
                             </thead>
                     <tbody>
                             <tr>
-                                <td>spinning reel</td><td> </td><td>skill</td><td>⭐⭐⭐⭐</td>
+                                <td>supuer spinning reel</td><td> </td><td>skill</td><td>⭐⭐⭐⭐</td>
                             </tr>
                             <tr>
                                 <td>fly rod</td><td> </td><td>skill</td><td>⭐*⭐</td>
