--- a/templates/index.html
+++ b/templates/index.html
@@ -162,7 +162,7 @@
              
 
 <!--                     <li><a> Port Aransas channel: 33" black drum </a></li> -->
-                    <li><a> NC offshore:  12 ring-tail</a></li>
+                    <li><a> NC offshore:  12 ring-tail piggy</a></li>
                 </ul>
                 <p>© 2022 M Elson</p>
 
