--- a/templates/fishing_conditions.html
+++ b/templates/fishing_conditions.html
@@ -100,7 +100,7 @@
     <!-- ######################################################################################## -->
 
 
-                  <p class="lawson"><em>Lawson Creek at Trent River</em></p>
+                  <p class="lawson"><em>Lawson Creek at Trent River in New Bern</em></p>
                
               <a class="continue">
                   <p><img src="static/blackFish.png" class="my_pic_clear"></p>
