--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@
             }
 
       .copyright{
+            color:white;
         text-align:center;
-        font-size:15px;
+        font-size:12px;
             }
