--- a/static/style.css
+++ b/static/style.css
@@ -118,5 +118,11 @@
             padding: 0% 8%;
             }
 
+        .copyright{
+              color: gray;              
+              text-align:center;
+              font-size:.75em;
+           }
+
 
 
