--- a/style.css
+++ b/style.css
@@ -122,5 +122,5 @@
       .copyright{
         color: gray;              
         text-align:center;
-        font-size:.75em;
+        font-size:.75rem;
             }
