--- a/static/style.css
+++ b/static/style.css
@@ -121,7 +121,7 @@
         .copyright{
               color: gray;              
               text-align:center;
-              font-size:.75em;
+              font-size:.75rem;
            }
 
 
