--- a/life/life.css
+++ b/life/life.css
@@ -1,6 +1,7 @@
 body {
     padding: 20px;
-    background-color: #444;
+    background-color: #99ccff:
+/*         #444; */   
 }
 
 #gridContainer {
